# SimAI

./: .gitignore
astra-sim-alibabacloud/: build.sh
astra-sim-alibabacloud/astra-sim/network_frontend/oxc/: CMakeLists.txt  OxcFlowGenerator.cc  OxcFlowGenerator.h  OxcFlowOutput.cc  OxcFlowOutput.h  OxcHttpClient.cc  OxcHttpClient.h  OxcMain.cc
astra-sim-alibabacloud/astra-sim/system/: OxcTypes.h
docs/: SimAI-OXC-Design.md
example/: microAllReduce_dp.txt
scripts/: build.sh
